add sw.js to index

--- a/index.html
+++ b/index.html
@@ -48,5 +48,6 @@
     <footer>
         <p>Zaawansowane technologie internetowe - Projekt UWSBM - 2023</p>
     </footer>
+    <script src="sw.js"></script>
 </body>
 </html>
