added more animals + some styling

--- a/index.html
+++ b/index.html
@@ -20,31 +20,43 @@
 <body>
     <header>
         <div>
-            <h1>Przewodnik po zwierzetach</h1>
-            <h2>Blah</h2>
+            <h1>Cool Animals</h1>
+            <div class="icon_div">
+                <img src="./img/icon.png" alt="">
+            </div>
         </div>
-        <a href="#main">Czytaj wiecej</a>
+        <a href="#main">Read More</a>
     </header>
     <main id="main">
         <section class="all_animals">
-            <h2>Zwierzeta</h2>
+            <h2 class="animals-text-h2">Animals</h2>
             <div>
                 <div class="single_animal">
                     <h3>Elephant</h3>
                     <img src="./img/elephant.jpg" alt="">
                     <p>
-                        What is Lorem Ipsum?
-                        
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                        Elephants are the largest existing land animals. Three living species are currently recognised: the African bush elephant, the African forest elephant, and the Asian elephant. They are the only surviving members of the family Elephantidae and the order Proboscidea. The order was formerly much more diverse during the Pleistocene, but most species became extinct during the Late Pleistocene epoch. 
                     </p>
                 </div>
                 <div class="single_animal">
                     <h3>Parrot</h3>
                     <img src="./img/parrot.jpg" alt="">
                     <p>
-                        What is Lorem Ipsum?
-                        
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                        Parrots, also known as psittacines, are birds of the roughly 398 species in 92 genera comprising the order Psittaciformes, found mostly in tropical and subtropical regions. The order is subdivided into three superfamilies: the Psittacoidea ("true" parrots), the Cacatuoidea (cockatoos), and the Strigopoidea (New Zealand parrots). One-third of all parrot species are threatened by extinction, with higher aggregate extinction risk (IUCN Red List Index) than any other comparable bird group.
+                    </p>
+                </div>
+                <div class="single_animal">
+                    <h3>Lion</h3>
+                    <img src="./img/lion.jpg" alt="">
+                    <p>
+                        The lion (Panthera leo) is a large cat of the genus Panthera native to Africa and India. It has a muscular, broad-chested body; short, rounded head; round ears; and a hairy tuft at the end of its tail. It is sexually dimorphic; adult male lions are larger than females and have a prominent mane. It is a social species, forming groups called prides. A lion's pride consists of a few adult males, related females, and cubs. Groups of female lions usually hunt together, preying mostly on large ungulates.
+                    </p>
+                </div>
+                <div class="single_animal">
+                    <h3>Blue Dragon (Glaucus atlanticus)</h3>
+                    <img src="./img/Glaucus-atlanticus.jpg" alt="">
+                    <p>
+                        Glaucus atlanticus (common names include the blue sea dragon, sea swallow, blue angel, blue glaucus, dragon slug, blue dragon, blue sea slug, and blue ocean slug) is a species of small, blue sea slug, a pelagic (open-ocean) aeolid nudibranch, a shell-less gastropod mollusk in the family Glaucidae.
                     </p>
                 </div>
             </div>
